# ChangeLog for net-libs/libgadu
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libgadu/ChangeLog,v 1.76 2014/08/13 02:30:01 reavertm Exp $

*libgadu-1.12.0 (13 Aug 2014)

  13 Aug 2014; Maciej Mrozowski <reavertm@gentoo.org>
  +files/libgadu-1.12.0-tests.patch, +libgadu-1.12.0.ebuild,
  -libgadu-1.11.3.ebuild, metadata.xml:
  Version bump, remove old.

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> libgadu-1.11.3.ebuild,
  libgadu-1.11.4.ebuild:
  Rename tarballs to packagename.

*libgadu-1.11.4 (26 May 2014)

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> +libgadu-1.11.4.ebuild:
  Version bump.

*libgadu-1.11.3 (06 May 2014)

  06 May 2014; Manuel Rüger <mrueg@gentoo.org> +libgadu-1.11.3.ebuild,
  -libgadu-1.11.2.ebuild:
  Version bump. See bug #505558

  08 Apr 2013; Maciej Mrozowski <reavertm@gentoo.org> libgadu-1.11.2.ebuild:
  Bump to EAPI5, fix bug 461692.

  14 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libgadu-1.11.1.ebuild:
  Stable for arm, wrt bug #457580

*libgadu-1.11.2 (05 Aug 2012)

  05 Aug 2012; Maciej Mrozowski <reavertm@gentoo.org> +libgadu-1.11.2.ebuild:
  Version bump, bug 429394.

  15 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libgadu-1.11.1.ebuild:
  x86 stable wrt bug #406015

  10 Mar 2012; Brent Baude <ranger@gentoo.org> libgadu-1.11.1.ebuild:
  Marking libgadu-1.11.1 ppc for bug 406015

  07 Mar 2012; Agostino Sarubbo <ago@gentoo.org> libgadu-1.11.1.ebuild:
  Stable for amd64, wrt bug #406015

  28 Jan 2012; Maciej Mrozowski <reavertm@gentoo.org> libgadu-1.11.0.ebuild,
  libgadu-1.11.1.ebuild:
  Update failing test information, related bug 373215.

*libgadu-1.11.1 (28 Jan 2012)

  28 Jan 2012; Maciej Mrozowski <reavertm@gentoo.org> +libgadu-1.11.1.ebuild,
  -libgadu-1.9.1.ebuild:
  Version bump, remove old, bug 399223.

  09 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> libgadu-1.11.0.ebuild:
  ppc stable wrt #372785
