@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=sys-libs/zlib gg11? ( >=dev-libs/protobuf-c-0.15 ) ssl? ( gnutls? ( net-libs/gnutls ) !gnutls? ( >=dev-libs/openssl-0.9.6m ) ) doc? ( app-doc/doxygen ) test? ( dev-libs/expat dev-libs/libxml2:2 net-misc/curl )
+DEPEND=>=dev-libs/protobuf-c-0.15 sys-libs/zlib ssl? ( gnutls? ( net-libs/gnutls ) !gnutls? ( >=dev-libs/openssl-0.9.6m ) ) doc? ( app-doc/doxygen ) test? ( dev-libs/expat dev-libs/libxml2:2 net-misc/curl )
 DESCRIPTION=This library implements the client side of the Gadu-Gadu protocol
 EAPI=5
 HOMEPAGE=http://toxygen.net/libgadu/
-IUSE=doc +gg11 gnutls ssl static-libs test threads
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos
+IUSE=doc gnutls ssl static-libs test threads
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos
 LICENSE=LGPL-2.1
-RDEPEND=sys-libs/zlib gg11? ( >=dev-libs/protobuf-c-0.15 ) ssl? ( gnutls? ( net-libs/gnutls ) !gnutls? ( >=dev-libs/openssl-0.9.6m ) ) !=net-im/kadu-0.6.0.2 !=net-im/kadu-0.6.0.1
+RDEPEND=>=dev-libs/protobuf-c-0.15 sys-libs/zlib ssl? ( gnutls? ( net-libs/gnutls ) !gnutls? ( >=dev-libs/openssl-0.9.6m ) ) !=net-im/kadu-0.6.0.2 !=net-im/kadu-0.6.0.1
 REQUIRED_USE=gnutls? ( ssl )
 SLOT=0
 SRC_URI=https://github.com/wojtekka/libgadu/archive/1.12.0.tar.gz -> libgadu-1.12.0.tar.gz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	autotools-utils	3727db64c7b960903d5033280f108080	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=52cb383d91ac9244d73b2216e7d42990
+_md5_=f02558ea78529550ed3fe462149f14d2
