@@ -9,13 +9,13 @@ DIST libgadu-1.12.0.tar.gz 290361 SHA256 536862af3beeeb9a3d17bc73c880204200a8aa1
 EBUILD libgadu-1.11.0.ebuild 1405 SHA256 ab7ac40cb6b8ec370a325e223ff16a3ecf40a64406f2e5309097a398db4a3721 SHA512 7fbb2bb268827c00fd12d57ca9576101b44e65563981698a6ccba584d3a749c8a4a15607e6a8d3726eea29eb7c183f4f3d46258b47f58145635da6619196884e WHIRLPOOL b40101dd88fa6c29c0c1a85fd510123d574b9109d15d0d8f35451df5d5e96a5659fd363898877de804c321d007566905b0e18a70dfd66d46a92d177cf68c1d0c
 EBUILD libgadu-1.11.1.ebuild 1429 SHA256 0c60d4e64a9b077c5e1394d1ef4216cc690c1752e602eb2b58e3043d42a43430 SHA512 71baa657e389f5a63a9705b11cec549f100ab19209df8530b1b8f707c803b9c92cdc7ddf92aefd3bec9e6b9fafc79aeee1361a7bbba80384d6d6bed4b3095899 WHIRLPOOL 7198ff86a6f5de6d54dc30692ad6996f5e07631585d136e4e08d018d8f916e4a6439ff36de956854bb86fd49982fd3d0b8ee84ccc92e019d66b68634ea3b860e
 EBUILD libgadu-1.11.4.ebuild 1446 SHA256 dbe79abd70bd9bc4391ba52b59a35a4e95f1b1778627716c1a10e368f213b0f1 SHA512 6ace9c5a88145b19e43943da532f88fbb1adc65a834b2f1d2fc4a7ec7adbb2793241c458c0eec79898e13de324fa5d57930ee1cde536e04a726bdfd3180e7334 WHIRLPOOL 87e54ebf516a9d423b8407e1080232be0db93128b2ce61d5c288400bae9041f5de27f004aa48057ff2ad529742b1c4f7504dd7157e21989ea6582a0f1ba21c78
-EBUILD libgadu-1.12.0.ebuild 1600 SHA256 4fc70d94864423af1dc9018d2b6983a1c367a98370eec3d692bc8c2ace498f27 SHA512 eb64174c2b584be087a51e35e106891b3f2c6faf77e9ea092af6fd63afff9d2bf7e49c105ad4d8420d460ef06b32acd2a59d4050673eb833c7887075cc1ba7b3 WHIRLPOOL 5b0c94eae723258bc331605357d11c5ecd2b3879db679f88162dcfd9a87dc8f91635dce4e02f26d3eb400336897ffc77df110b4235ccf443206568d09420b4aa
-MISC ChangeLog 10076 SHA256 2b88970b042663e5e073c9f261226c38a68b0b8648eaf1fddcfef3640244b70c SHA512 f8c35e494874ef02e8c51819f51e649792fafec0d3ec20286fe00345e4a75f9f4e4377df6431cd155251104de0171fb890ce3761f02046f0c3bd9403e0669848 WHIRLPOOL 1ec28375f8112590616d361a900e40cd9eb2da3c9338b6be7d1ce8a5785aa6213354ba567480ccc6758b88b385cb09b2e1e883d390659acd071dd4187748b085
-MISC metadata.xml 336 SHA256 1a16ea2109a3b860f0654e4c1f6528edadd46f5eb0a64fe38f5066fb9440ea85 SHA512 eb8f01c6daa8b6e053b518bbab180c237af1a97ee37794eaf2313049684402e7125fa5680d01689613eb637fc66a0f2493edcea646f49fb6d696f8f22ff8fd48 WHIRLPOOL 7b6768a6cb811d8ab91df7508dec4cbde29bbbb612fe29c762fa16a54a9771b5af43ff7163ed38c4864225af9a18e99079d5daf2a44ce0532d798f586faface9
+EBUILD libgadu-1.12.0.ebuild 1548 SHA256 08d83fec0a6dfddb1f61589e13be46f5000aca842e72db36ec859ab1442d7769 SHA512 ef75de597cb5e6a516fb1297fac7121df7cf0d402cd729c125dbf87b48bf409dfe204d81f4451a2b6b8b5151b4067d82893a0d156f93e42c6cff05552efdcf4c WHIRLPOOL 0795e2d7b2d07b82ae2a5be2ad264a80ab3734722d05759ca083432025c69750fb8e86dc8397edf5e6ca9d8b336f2ba93c71c532ff1d16a7437222fd015544a0
+MISC ChangeLog 10267 SHA256 37f5805a8ab6ff9b9392a91c8655851b6fbf7894f0c48ada515cda336fddb766 SHA512 1d5977c79d743b2af98a013eaf7802f008d669281476133943f08c2fa0d6347b49be120e3a556c8fdf9c88fb30a9dcbed7f307d08de8cb67645fc23dad70af28 WHIRLPOOL 2a2876ae236354ea1fe9396c782b0ec3178c988b62e0806ad8bcdd9c1958b732d657834050d825c5d176ece4046e6ec6e59afa343b339df5691b7255d0657544
+MISC metadata.xml 258 SHA256 2f8c9c8d8671a47521046aeb7ba86a8e407ad25da4f2d31a87d34a6830cae052 SHA512 0e56317d1cf995236f3cf92b9c01de4cccaf0ab1779bc2e1742f3bb36c8256a7bde702ca3738ca1d824d34c15d038d66f6b23b33be5561afd6879fed6056af0e WHIRLPOOL c77d0300654da67186ce2c72dbf3f46e050267fdaaa6875fff363c4de1586a426102bcaf11775a9bf97a1eee88671f2fd53379b96a9e65dce90de2dd7df1557f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPqzcQACgkQFuHa/bHpVdstHwCfZCdLjnf8dWh2QE3TTMWb2Tur
-DKwAnAl/vlYyuF7EdeKHFElaxwh1TrvJ
-=a4bG
+iEYEAREIAAYFAlPr7jEACgkQFuHa/bHpVdvEjACgstdg3G/B3umouaK7BAbbusYJ
+c8wAoJcrnbgZMwpcpsX+K19pNrW5D01q
+=P/qC
 -----END PGP SIGNATURE-----
